feat: implement phase two DeepSeek agent web